--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         .tool-icon { font-size: 24px; color: #2E7D32; margin-bottom: 8px; }
         .tool-text { font-weight: bold; font-size: 13px; }
 
-        /* ৬. পপ-আপ মডাল (Firebase Updated) */
+        /* ৬. পপ-আপ মডাল */
         .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.6); z-index: 5000; display: none; justify-content: center; align-items: center; backdrop-filter: blur(5px); }
         .modal-box { background: white; width: 90%; max-width: 400px; padding: 30px; border-radius: 20px; position: relative; max-height: 90vh; overflow-y: auto; }
         .close-btn { position: absolute; top: 15px; right: 20px; font-size: 24px; color: #aaa; cursor: pointer; }
@@ -50,6 +50,11 @@
         .btn-full { width: 100%; padding: 14px; background: #4CAF50; color: white; border: none; border-radius: 10px; font-weight: bold; margin-top: 15px; cursor: pointer; }
         .google-btn { background: #fff; color: #555; border: 1px solid #ddd; display: flex; align-items: center; justify-content: center; gap: 10px; margin-top: 10px; }
         .hidden { display: none; }
+        
+        /* নতুন এরর স্টাইল */
+        .error-msg { color: #d32f2f; font-size: 12px; margin-top: 4px; text-align: left; display: none; padding-left: 5px; }
+        input.input-error { border: 1px solid #d32f2f; background: #fff8f8; }
+
         .footer { background: #111; color: #777; text-align: center; padding: 30px; font-size: 13px; }
     </style>
 </head>
@@ -68,7 +73,7 @@
     <section class="about-section">
         <h2 class="section-title">আমাদের প্রজেক্ট সম্পর্কে</h2>
         <p class="about-desc">
-            Smart Agri Pro একটি ডিজিটাল কৃষি প্ল্যাটফর্ম যা আধুনিক প্রযুক্তির মাধ্যমে কৃষিকাজকে সহজতর করে। আমরা মূলত <b>অটোমেটিক পাম্প সিস্টেম</b>, <b>অটো হারভেস্ট প্রযুক্তি</b> এবং নিরবচ্ছিন্ন <b>অটো পাম্প সাপ্লাই</b> নিশ্চিত করার মাধ্যমে কৃষকদের শ্রম ও সময় বাঁচাতে কাজ করছি।
+            Smart Agri Pro একটি ডিজিটাল কৃষি প্ল্যাটফর্ম যা আধুনিক প্রযুক্তির মাধ্যমে কৃষিকাজকে সহজতর করে।
         </p>
     </section>
 
@@ -114,7 +119,9 @@
 
             <div id="view-login">
                 <input type="email" id="login-email" placeholder="ইমেইল এড্রেস">
+                <div id="login-email-error" class="error-msg"></div>
                 <input type="password" id="login-password" placeholder="পাসওয়ার্ড">
+                <div id="login-pass-error" class="error-msg"></div>
                 <button class="btn-full" id="btn-login-submit">লগইন করুন</button>
                 <button class="btn-full google-btn" id="btn-google">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" width="18"> Google দিয়ে প্রবেশ করুন
@@ -125,7 +132,9 @@
                 <input type="text" id="reg-fullname" placeholder="পুরো নাম">
                 <input type="tel" id="reg-phone" placeholder="মোবাইল নাম্বার">
                 <input type="email" id="reg-email" placeholder="ইমেইল">
+                <div id="reg-email-error" class="error-msg"></div>
                 <input type="password" id="reg-password" placeholder="পাসওয়ার্ড">
+                <div id="reg-pass-error" class="error-msg"></div>
                 <button class="btn-full" id="btn-register-submit">রেজিস্ট্রেশন সম্পন্ন করুন</button>
             </div>
         </div>
@@ -144,6 +153,9 @@
             document.getElementById('view-register').classList.toggle('hidden', isLogin);
             document.getElementById('tab-login').classList.toggle('active', isLogin);
             document.getElementById('tab-register').classList.toggle('active', !isLogin);
+            // এরর মেসেজ রিসেট
+            document.querySelectorAll('.error-msg').forEach(el => el.style.display = 'none');
+            document.querySelectorAll('input').forEach(el => el.classList.remove('input-error'));
         }
     </script>
 
@@ -157,8 +169,23 @@
         } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
         import { doc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
+        // সাহায্যকারী ফাংশন এরর দেখানোর জন্য
+        const showError = (elementId, inputId, message) => {
+            const errEl = document.getElementById(elementId);
+            const inputEl = document.getElementById(inputId);
+            errEl.innerText = message;
+            errEl.style.display = 'block';
+            inputEl.classList.add('input-error');
+        };
+
+        const resetErrors = () => {
+            document.querySelectorAll('.error-msg').forEach(el => el.style.display = 'none');
+            document.querySelectorAll('input').forEach(el => el.classList.remove('input-error'));
+        };
+
         // ১. রেজিস্ট্রেশন ফাংশন
         document.getElementById('btn-register-submit').onclick = async () => {
+            resetErrors();
             const name = document.getElementById('reg-fullname').value;
             const phone = document.getElementById('reg-phone').value;
             const email = document.getElementById('reg-email').value;
@@ -169,24 +196,22 @@
             try {
                 const userCredential = await createUserWithEmailAndPassword(auth, email, pass);
                 const user = userCredential.user;
-
-                // Firestore-এ ইউজারের নাম ও ফোন সেভ করা
-                await setDoc(doc(db, "users", user.uid), {
-                    fullName: name,
-                    phone: phone,
-                    email: email,
-                    uid: user.uid
-                });
-
-                alert("রেজিস্ট্রেশন সফল হয়েছে!");
+                await setDoc(doc(db, "users", user.uid), { fullName: name, phone: phone, email: email, uid: user.uid });
                 window.location.href = 'Dashboard.html';
             } catch (error) {
-                alert("ভুল হয়েছে: " + error.message);
+                if (error.code === 'auth/email-already-in-use') {
+                    showError('reg-email-error', 'reg-email', 'এই ইমেইলটি ইতিমধ্যে ব্যবহার করা হয়েছে।');
+                } else if (error.code === 'auth/weak-password') {
+                    showError('reg-pass-error', 'reg-password', 'পাসওয়ার্ড অন্তত ৬ অক্ষরের হতে হবে।');
+                } else {
+                    alert("ভুল হয়েছে: " + error.message);
+                }
             }
         };
 
         // ২. লগইন ফাংশন
         document.getElementById('btn-login-submit').onclick = async () => {
+            resetErrors();
             const email = document.getElementById('login-email').value;
             const pass = document.getElementById('login-password').value;
 
@@ -194,7 +219,11 @@
                 await signInWithEmailAndPassword(auth, email, pass);
                 window.location.href = 'Dashboard.html';
             } catch (error) {
-                alert("লগইন ব্যর্থ: " + error.message);
+                if (error.code === 'auth/user-not-found' || error.code === 'auth/wrong-password' || error.code === 'auth/invalid-credential') {
+                    showError('login-email-error', 'login-email', 'ইমেইল বা পাসওয়ার্ড সঠিক নয়।');
+                } else {
+                    alert("লগইন ব্যর্থ: " + error.message);
+                }
             }
         };
 
@@ -202,8 +231,7 @@
         document.getElementById('btn-google').onclick = async () => {
             const provider = new GoogleAuthProvider();
             try {
-                const result = await signInWithPopup(auth, provider);
-                // গুগলের তথ্যগুলোও চাইলে Firestore এ আপডেট করা যায়
+                await signInWithPopup(auth, provider);
                 window.location.href = 'Dashboard.html';
             } catch (error) {
                 alert("গুগল লগইন ব্যর্থ হয়েছে");
