--- a/index.html
+++ b/index.html
@@ -6,25 +6,22 @@
     <title>Smart Agri Pro</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
+        /* আপনার আগের সব CSS এখানে থাকবে */
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', sans-serif; scroll-behavior: smooth; }
         body { background: #fdfdfd; color: #333; overflow-x: hidden; }
 
-        /* ১. মেনুবার */
         .navbar { display: flex; justify-content: space-between; align-items: center; background: rgba(255, 255, 255, 0.95); padding: 15px 20px; position: fixed; top: 0; left: 0; width: 100%; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
         .logo { font-size: 22px; font-weight: 700; color: #2E7D32; display: flex; align-items: center; gap: 8px; }
 
-        /* ২. হিরো সেকশন */
         .hero { height: 90vh; background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1625246333195-78d9c38ad449?w=800'); background-size: cover; background-position: center; background-attachment: fixed; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; color: white; padding: 20px; }
         .hero h1 { font-size: 32px; font-weight: 800; margin-bottom: 15px; }
         .hero p { font-size: 16px; margin-bottom: 30px; max-width: 600px; line-height: 1.6; }
         .cta-btn { background: #4CAF50; color: white; padding: 14px 35px; border-radius: 50px; text-decoration: none; font-weight: bold; cursor: pointer; border: none; font-size: 16px; }
 
-        /* ৩. প্রজেক্ট ডিটেইলস */
         .about-section { padding: 60px 20px; text-align: center; background: #fff; }
         .section-title { font-size: 26px; color: #2E7D32; margin-bottom: 20px; font-weight: bold; }
         .about-desc { font-size: 15px; color: #555; line-height: 1.8; max-width: 800px; margin: 0 auto; }
 
-        /* ৪. সার্ভিস সমূহ */
         .services-section { padding: 40px 20px; background: #f9f9f9; text-align: center; }
         .services-grid { display: flex; flex-direction: column; gap: 15px; max-width: 600px; margin: 20px auto 0; }
         .service-card { background: white; padding: 20px; border-radius: 15px; display: flex; align-items: center; gap: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.03); border-left: 5px solid #4CAF50; cursor: pointer; text-align: left; }
@@ -32,14 +29,12 @@
         .s-info h3 { font-size: 18px; margin-bottom: 5px; }
         .s-info p { font-size: 13px; color: #666; }
 
-        /* ৫. ফ্রি টুলস */
         .tools-section { padding: 60px 20px; text-align: center; background: #fff; }
         .tools-container { display: flex; justify-content: center; gap: 15px; flex-wrap: wrap; margin-top: 25px; }
         .tool-box { background: #f1f8e9; padding: 20px; border-radius: 12px; width: 30%; min-width: 100px; max-width: 130px; text-align: center; cursor: pointer; text-decoration: none; color: #333; border: 1px solid #c8e6c9; transition: 0.3s; }
         .tool-icon { font-size: 24px; color: #2E7D32; margin-bottom: 8px; }
         .tool-text { font-weight: bold; font-size: 13px; }
 
-        /* ৬. পপ-আপ মডাল */
         .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.6); z-index: 5000; display: none; justify-content: center; align-items: center; backdrop-filter: blur(5px); }
         .modal-box { background: white; width: 90%; max-width: 400px; padding: 30px; border-radius: 20px; position: relative; max-height: 90vh; overflow-y: auto; }
         .close-btn { position: absolute; top: 15px; right: 20px; font-size: 24px; color: #aaa; cursor: pointer; }
@@ -48,13 +43,14 @@
         .tab.active { color: #2E7D32; border-bottom: 3px solid #2E7D32; }
         input { width: 100%; padding: 12px; margin-top: 10px; background: #f9f9f9; border: 1px solid #ddd; border-radius: 8px; outline: none; }
         .btn-full { width: 100%; padding: 14px; background: #4CAF50; color: white; border: none; border-radius: 10px; font-weight: bold; margin-top: 15px; cursor: pointer; }
-        .google-btn { background: #fff; color: #555; border: 1px solid #ddd; display: flex; align-items: center; justify-content: center; gap: 10px; margin-top: 10px; }
-        .hidden { display: none; }
         
-        /* নতুন এরর স্টাইল */
+        /* গুগল বাটনের আপডেট করা স্টাইল */
+        .google-btn { background: #fff; color: #555; border: 1px solid #ddd; display: flex; align-items: center; justify-content: center; gap: 10px; margin-top: 10px; }
+        .google-btn img { margin-right: 8px; } 
+
+        .hidden { display: none; }
         .error-msg { color: #d32f2f; font-size: 12px; margin-top: 4px; text-align: left; display: none; padding-left: 5px; }
         input.input-error { border: 1px solid #d32f2f; background: #fff8f8; }
-
         .footer { background: #111; color: #777; text-align: center; padding: 30px; font-size: 13px; }
     </style>
 </head>
@@ -68,45 +64,6 @@
         <h1>প্রযুক্তির ছোঁয়ায় আধুনিক কৃষি</h1>
         <p>ড্রোন, স্যাটেলাইট এবং এআই প্রযুক্তি এখন আপনার হাতের মুঠোয়।</p>
         <button class="cta-btn" onclick="showLoginModal()">অ্যাকাউন্টে প্রবেশ করুন</button>
-    </section>
-
-    <section class="about-section">
-        <h2 class="section-title">আমাদের প্রজেক্ট সম্পর্কে</h2>
-        <p class="about-desc">
-            Smart Agri Pro একটি ডিজিটাল কৃষি প্ল্যাটফর্ম যা আধুনিক প্রযুক্তির মাধ্যমে কৃষিকাজকে সহজতর করে।
-        </p>
-    </section>
-
-    <section class="services-section">
-        <h2 class="section-title">সার্ভিসসমূহ</h2>
-        <div class="services-grid">
-            <div class="service-card" onclick="showLoginModal()">
-                <div class="s-icon"><i class="fas fa-plane-departure"></i></div>
-                <div class="s-info"><h3>ড্রোন স্প্রে</h3><p>নিখুঁতভাবে সার বা কীটনাশক স্প্রে করুন।</p></div>
-            </div>
-            <div class="service-card" onclick="showLoginModal()">
-                <div class="s-icon"><i class="fas fa-tractor"></i></div>
-                <div class="s-info"><h3>অটো হারভেস্ট</h3><p>মেশিন দিয়ে দ্রুত ফসল কাটার সুবিধা।</p></div>
-            </div>
-        </div>
-    </section>
-
-    <section class="tools-section">
-        <h2 class="section-title">ফ্রি টুলস</h2>
-        <div class="tools-container">
-            <a href="map.html?mode=measure" class="tool-box">
-                <div class="tool-icon"><i class="fas fa-ruler-combined"></i></div>
-                <div class="tool-text">জমি মাপুন</div>
-            </a>
-            <a href="map.html?mode=scan" class="tool-box">
-                <div class="tool-icon"><i class="fas fa-satellite"></i></div>
-                <div class="tool-text">জমি স্ক্যানার</div>
-            </a>
-            <a href="scanner.html" class="tool-box">
-                <div class="tool-icon"><i class="fas fa-search-plus"></i></div>
-                <div class="tool-text">রোগ নির্ণয়</div>
-            </a>
-        </div>
     </section>
 
     <div class="modal-overlay" id="loginModal">
@@ -123,14 +80,16 @@
                 <input type="password" id="login-password" placeholder="পাসওয়ার্ড">
                 <div id="login-pass-error" class="error-msg"></div>
                 <button class="btn-full" id="btn-login-submit">লগইন করুন</button>
+                
                 <button class="btn-full google-btn" id="btn-google">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" width="18"> Google দিয়ে প্রবেশ করুন
+                    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="20" alt="Google"> 
+                    Google দিয়ে প্রবেশ করুন
                 </button>
             </div>
 
             <div id="view-register" class="hidden">
                 <input type="text" id="reg-fullname" placeholder="পুরো নাম">
-                <input type="tel" id="reg-phone" placeholder="মোবাইল নাম্বার">
+                <input type="tel" id="reg-phone" placeholder="মোাবাইল নাম্বার">
                 <input type="email" id="reg-email" placeholder="ইমেইল">
                 <div id="reg-email-error" class="error-msg"></div>
                 <input type="password" id="reg-password" placeholder="পাসওয়ার্ড">
@@ -139,10 +98,6 @@
             </div>
         </div>
     </div>
-
-    <footer class="footer">
-        <p>&copy; 2025 Smart Agri Solutions. All Rights Reserved.</p>
-    </footer>
 
     <script>
         function showLoginModal() { document.getElementById('loginModal').style.display = 'flex'; }
@@ -153,13 +108,13 @@
             document.getElementById('view-register').classList.toggle('hidden', isLogin);
             document.getElementById('tab-login').classList.toggle('active', isLogin);
             document.getElementById('tab-register').classList.toggle('active', !isLogin);
-            // এরর মেসেজ রিসেট
             document.querySelectorAll('.error-msg').forEach(el => el.style.display = 'none');
             document.querySelectorAll('input').forEach(el => el.classList.remove('input-error'));
         }
     </script>
 
     <script type="module">
+        // আপনার আগের সব Firebase স্ক্রিপ্ট এখানে থাকবে
         import { auth, db } from './firebase-config.js';
         import { 
             createUserWithEmailAndPassword, 
@@ -169,7 +124,6 @@
         } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
         import { doc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-        // সাহায্যকারী ফাংশন এরর দেখানোর জন্য
         const showError = (elementId, inputId, message) => {
             const errEl = document.getElementById(elementId);
             const inputEl = document.getElementById(inputId);
@@ -183,16 +137,13 @@
             document.querySelectorAll('input').forEach(el => el.classList.remove('input-error'));
         };
 
-        // ১. রেজিস্ট্রেশন ফাংশন
         document.getElementById('btn-register-submit').onclick = async () => {
             resetErrors();
             const name = document.getElementById('reg-fullname').value;
             const phone = document.getElementById('reg-phone').value;
             const email = document.getElementById('reg-email').value;
             const pass = document.getElementById('reg-password').value;
-
             if(!email || !pass || !name) { alert("সবগুলো ঘর পূরণ করুন"); return; }
-
             try {
                 const userCredential = await createUserWithEmailAndPassword(auth, email, pass);
                 const user = userCredential.user;
@@ -200,41 +151,38 @@
                 window.location.href = 'Dashboard.html';
             } catch (error) {
                 if (error.code === 'auth/email-already-in-use') {
-                    showError('reg-email-error', 'reg-email', 'এই ইমেইলটি ইতিমধ্যে ব্যবহার করা হয়েছে।');
+                    showError('reg-email-error', 'reg-email', 'এই ইমেইলটি ইতিমধ্যে ব্যবহার করা হয়েছে।');
                 } else if (error.code === 'auth/weak-password') {
-                    showError('reg-pass-error', 'reg-password', 'পাসওয়ার্ড অন্তত ৬ অক্ষরের হতে হবে।');
+                    showError('reg-pass-error', 'reg-password', 'পাসওয়ার্ড অন্তত ৬ অক্ষরের হতে হবে।');
                 } else {
-                    alert("ভুল হয়েছে: " + error.message);
+                    alert("ভুল হয়েছে: " + error.message);
                 }
             }
         };
 
-        // ২. লগইন ফাংশন
         document.getElementById('btn-login-submit').onclick = async () => {
             resetErrors();
             const email = document.getElementById('login-email').value;
             const pass = document.getElementById('login-password').value;
-
             try {
                 await signInWithEmailAndPassword(auth, email, pass);
                 window.location.href = 'Dashboard.html';
             } catch (error) {
                 if (error.code === 'auth/user-not-found' || error.code === 'auth/wrong-password' || error.code === 'auth/invalid-credential') {
-                    showError('login-email-error', 'login-email', 'ইমেইল বা পাসওয়ার্ড সঠিক নয়।');
+                    showError('login-email-error', 'login-email', 'ইমেইল বা পাসওয়ার্ড সঠিক নয়।');
                 } else {
                     alert("লগইন ব্যর্থ: " + error.message);
                 }
             }
         };
 
-        // ৩. গুগল লগইন
         document.getElementById('btn-google').onclick = async () => {
             const provider = new GoogleAuthProvider();
             try {
                 await signInWithPopup(auth, provider);
                 window.location.href = 'Dashboard.html';
             } catch (error) {
-                alert("গুগল লগইন ব্যর্থ হয়েছে");
+                alert("গুগল লগইন ব্যর্থ হয়েছে");
             }
         };
     </script>
