--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
             display: flex; 
             justify-content: space-between; 
             align-items: center; 
-            background: rgba(255, 255, 255, 0.8); /* ট্রান্সপারেন্ট সাদা */
-            backdrop-filter: blur(15px); /* ঝাপসা কাঁচের ইফেক্ট */
+            background: rgba(255, 255, 255, 0.8); 
+            backdrop-filter: blur(15px); 
             padding: 15px 5%; 
             position: fixed; 
-            top: 0; 
-            left: 0; 
-            width: 100%; 
+            top: 0; left: 0; width: 100%; 
             z-index: 1000; 
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.05);
             border-bottom: 1px solid rgba(255, 255, 255, 0.3);
@@ -32,11 +30,11 @@
         .hero { 
             height: 100vh; 
             background: 
-                linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(46, 125, 50, 0.3) 100%), /* ডাইনামিক গ্রেডিয়েন্ট ওভারলে */
+                linear-gradient(135deg, rgba(0,0,0,0.7) 0%, rgba(46, 125, 50, 0.3) 100%), 
                 url('https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1600&q=80'); 
             background-size: cover; 
             background-position: center; 
-            background-attachment: fixed; /* প্যারালাক্স ইফেক্ট */
+            background-attachment: fixed; 
             display: flex; 
             flex-direction: column; 
             justify-content: center; 
@@ -47,11 +45,11 @@
         }
 
         .hero h1 { 
-            font-size: clamp(32px, 5vw, 56px); /* রেসপন্সিভ ফন্ট সাইজ */
+            font-size: clamp(32px, 5vw, 56px); 
             font-weight: 800; 
             margin-bottom: 20px; 
             line-height: 1.2;
-            text-shadow: 2px 4px 10px rgba(0,0,0,0.3); /* টেক্সট শ্যাডো */
+            text-shadow: 2px 4px 10px rgba(0,0,0,0.3); 
             animation: fadeInDown 1s ease-out;
         }
 
@@ -64,9 +62,8 @@
             animation: fadeInUp 1s ease-out 0.3s backwards;
         }
 
-        /* ৪. প্রিমিয়াম বাটন ডিজাইন */
         .cta-btn { 
-            background: linear-gradient(45deg, #4CAF50, #2E7D32); /* গ্রেডিয়েন্ট বাটন */
+            background: linear-gradient(45deg, #4CAF50, #2E7D32); 
             color: white; 
             padding: 16px 45px; 
             border-radius: 50px; 
@@ -79,37 +76,43 @@
             transition: all 0.3s ease;
             animation: fadeInUp 1s ease-out 0.6s backwards;
         }
+        .cta-btn:hover { transform: translateY(-3px); box-shadow: 0 15px 25px rgba(46, 125, 50, 0.4); filter: brightness(1.1); }
 
-        .cta-btn:hover { 
-            transform: translateY(-3px); /* হোভারে উপরে উঠবে */
-            box-shadow: 0 15px 25px rgba(46, 125, 50, 0.4);
-            filter: brightness(1.1);
-        }
+        /* ৪. পুরাতন কোডের অন্যান্য সেকশন (About, Services, Tools) */
+        .about-section { padding: 80px 20px; text-align: center; background: #fff; }
+        .section-title { font-size: 32px; color: #2E7D32; margin-bottom: 20px; font-weight: bold; }
+        .about-desc { font-size: 16px; color: #555; line-height: 1.8; max-width: 800px; margin: 0 auto; }
 
-        /* ৫. অ্যানিমেশনস */
-        @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(30px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        @keyframes fadeInDown {
-            from { opacity: 0; transform: translateY(-30px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
+        .services-section { padding: 60px 20px; background: #f9f9f9; text-align: center; }
+        .services-grid { display: flex; flex-direction: column; gap: 20px; max-width: 700px; margin: 30px auto 0; }
+        .service-card { background: white; padding: 25px; border-radius: 20px; display: flex; align-items: center; gap: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.05); border-left: 5px solid #4CAF50; cursor: pointer; text-align: left; transition: 0.3s; }
+        .service-card:hover { transform: scale(1.02); }
+        .s-icon { width: 60px; height: 60px; background: #e8f5e9; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 26px; color: #2E7D32; flex-shrink: 0; }
+        .s-info h3 { font-size: 20px; margin-bottom: 5px; color: #333; }
 
-        /* ৬. আপনার আগের মডাল এবং এরর স্টাইল (অপরিবর্তিত) */
+        .tools-section { padding: 80px 20px; text-align: center; background: #fff; }
+        .tools-container { display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; margin-top: 30px; }
+        .tool-box { background: #f1f8e9; padding: 25px; border-radius: 15px; width: 30%; min-width: 120px; max-width: 150px; text-align: center; cursor: pointer; text-decoration: none; color: #333; border: 1px solid #c8e6c9; transition: 0.3s; }
+        .tool-box:hover { background: #c8e6c9; transform: translateY(-5px); }
+        .tool-icon { font-size: 30px; color: #2E7D32; margin-bottom: 10px; }
+
+        /* ৫. মডাল এবং এরর স্টাইল */
         .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.6); z-index: 5000; display: none; justify-content: center; align-items: center; backdrop-filter: blur(8px); }
         .modal-box { background: white; width: 90%; max-width: 400px; padding: 30px; border-radius: 20px; position: relative; max-height: 90vh; overflow-y: auto; box-shadow: 0 20px 40px rgba(0,0,0,0.2); }
         .close-btn { position: absolute; top: 15px; right: 20px; font-size: 24px; color: #aaa; cursor: pointer; }
         .tabs { display: flex; border-bottom: 1px solid #eee; margin-bottom: 15px; }
         .tab { flex: 1; padding: 12px; cursor: pointer; text-align: center; color: #888; font-weight: bold; transition: 0.3s; }
         .tab.active { color: #2E7D32; border-bottom: 3px solid #2E7D32; }
-        input { width: 100%; padding: 14px; margin-top: 10px; background: #f5f5f5; border: 1px solid #ddd; border-radius: 10px; outline: none; transition: 0.3s; }
-        input:focus { border-color: #4CAF50; background: #fff; }
-        .btn-full { width: 100%; padding: 14px; background: #4CAF50; color: white; border: none; border-radius: 10px; font-weight: bold; margin-top: 15px; cursor: pointer; font-size: 16px; }
+        input { width: 100%; padding: 14px; margin-top: 10px; background: #f5f5f5; border: 1px solid #ddd; border-radius: 10px; outline: none; }
+        .btn-full { width: 100%; padding: 14px; background: #4CAF50; color: white; border: none; border-radius: 10px; font-weight: bold; margin-top: 15px; cursor: pointer; }
         .google-btn { background: #fff; color: #555; border: 1px solid #ddd; display: flex; align-items: center; justify-content: center; gap: 10px; margin-top: 10px; }
         .hidden { display: none; }
-        .error-msg { color: #d32f2f; font-size: 12px; margin-top: 4px; text-align: left; display: none; padding-left: 5px; }
+        .error-msg { color: #d32f2f; font-size: 12px; margin-top: 4px; text-align: left; display: none; }
         input.input-error { border: 1px solid #d32f2f; background: #fff8f8; }
+        .footer { background: #111; color: #777; text-align: center; padding: 40px; font-size: 14px; }
+
+        @keyframes fadeInUp { from { opacity: 0; transform: translateY(30px); } to { opacity: 1; transform: translateY(0); } }
+        @keyframes fadeInDown { from { opacity: 0; transform: translateY(-30px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
 <body>
@@ -124,6 +127,34 @@
         <button class="cta-btn" onclick="showLoginModal()">অ্যাকাউন্টে প্রবেশ করুন</button>
     </section>
 
+    <section class="about-section">
+        <h2 class="section-title">আমাদের সম্পর্কে</h2>
+        <p class="about-desc">আমরা কৃষকদের আধুনিক প্রযুক্তির সাথে যুক্ত করতে কাজ করছি। আমাদের লক্ষ্য হলো কৃষিকে আরও সহজ এবং লাভজনক করে তোলা।</p>
+    </section>
+
+    <section class="services-section">
+        <h2 class="section-title">আমাদের সেবাসমূহ</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <div class="s-icon"><i class="fas fa-microchip"></i></div>
+                <div class="s-info"><h3>মাটি পরীক্ষা</h3><p>মাটির গুণাগুণ এবং সঠিক সার ব্যবহারের পরামর্শ।</p></div>
+            </div>
+            <div class="service-card">
+                <div class="s-icon"><i class="fas fa-cloud-sun"></i></div>
+                <div class="s-info"><h3>আবহাওয়ার পূর্বাভাস</h3><p>আপনার এলাকার সঠিক আবহাওয়ার তথ্য জানুন।</p></div>
+            </div>
+        </div>
+    </section>
+
+    <section class="tools-section">
+        <h2 class="section-title">কৃষি টুলস</h2>
+        <div class="tools-container">
+            <div class="tool-box"><div class="tool-icon"><i class="fas fa-calculator"></i></div><div class="tool-text">লাভ ক্যালকুলেটর</div></div>
+            <div class="tool-box"><div class="tool-icon"><i class="fas fa-bug"></i></div><div class="tool-text">পোকা দমন</div></div>
+            <div class="tool-box"><div class="tool-icon"><i class="fas fa-tint"></i></div><div class="tool-text">সেচ ব্যবস্থাপনা</div></div>
+        </div>
+    </section>
+
     <div class="modal-overlay" id="loginModal">
         <div class="modal-box">
             <span class="close-btn" onclick="closeLoginModal()">&times;</span>
@@ -131,7 +162,6 @@
                 <div class="tab active" onclick="switchTab('login')" id="tab-login">লগইন</div>
                 <div class="tab" onclick="switchTab('register')" id="tab-register">রেজিস্ট্রেশন</div>
             </div>
-
             <div id="view-login">
                 <input type="email" id="login-email" placeholder="ইমেইল এড্রেস">
                 <div id="login-email-error" class="error-msg"></div>
@@ -139,11 +169,9 @@
                 <div id="login-pass-error" class="error-msg"></div>
                 <button class="btn-full" id="btn-login-submit">লগইন করুন</button>
                 <button class="btn-full google-btn" id="btn-google">
-                    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="20" alt="Google"> 
-                    Google দিয়ে প্রবেশ করুন
+                    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="20" alt="Google"> Google দিয়ে প্রবেশ করুন
                 </button>
             </div>
-
             <div id="view-register" class="hidden">
                 <input type="text" id="reg-fullname" placeholder="পুরো নাম">
                 <input type="tel" id="reg-phone" placeholder="মোাবাইল নাম্বার">
@@ -155,6 +183,8 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer">© 2026 Smart Agri Pro. All Rights Reserved.</footer>
 
     <script>
         function showLoginModal() { document.getElementById('loginModal').style.display = 'flex'; }
@@ -171,8 +201,8 @@
     </script>
 
     <script type="module">
-        // (আপনার দেওয়া আগের সব Firebase ইম্পোর্ট এবং লজিক এখানে হুবহু বসে যাবে)
-        // ... (auth, db logic)
+        // এখানে আপনার Firebase কনফিগ এবং ইভেন্ট লিসেনারগুলো (যেমন: btn-login-submit.onclick) আগের মতো থাকবে।
+        // আপনার পুরাতন কোডের স্ক্রিপ্ট অংশটি এখানে হুবহু পেস্ট করে দিন।
     </script>
 </body>
 </html>
