--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <div id="login-pass-error" class="error-msg"></div>
                 <button class="btn-full" id="btn-login-submit">লগইন করুন</button>
                 <button class="btn-full google-btn" id="btn-google">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" width="18"> Google দিয়ে প্রবেশ করুন
+                    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="20" alt="Google"> Google দিয়ে প্রবেশ করুন
                 </button>
             </div>
 
@@ -298,3 +298,4 @@
     </script>
 </body>
 </html>
+
