--- a/Dashboard.html
+++ b/Dashboard.html
@@ -60,7 +60,6 @@
         .map-section { background: white; border-radius: 20px; padding: 20px; box-shadow: var(--card-shadow); }
         .map-header { display: flex; justify-content: space-between; margin-bottom: 15px; }
         
-        /* --- UPDATED ADVANCED MAP IMAGE --- */
         .map-placeholder { 
             width: 100%; 
             height: 300px; 
@@ -72,6 +71,14 @@
             position: relative;
             box-shadow: inset 0 0 50px rgba(0,0,0,0.1);
         }
+
+        /* --- SERVICE CARDS STYLES --- */
+        .service-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin-top: 20px; }
+        .service-card { background: white; border-radius: 15px; padding: 15px; box-shadow: var(--card-shadow); border: 1px solid #eee; transition: 0.3s; cursor: pointer; text-decoration: none; color: inherit; }
+        .service-card:hover { transform: translateY(-5px); border-color: var(--primary); }
+        .service-card i { font-size: 20px; color: var(--primary); margin-bottom: 10px; display: block; }
+        .service-card h4 { font-size: 14px; margin-bottom: 5px; }
+        .service-card p { font-size: 11px; color: #777; line-height: 1.4; }
 
         .ai-panel { background: white; border-radius: 20px; padding: 20px; box-shadow: var(--card-shadow); display: flex; flex-direction: column; }
         .ai-btn { background: var(--primary); color: white; padding: 15px; border-radius: 12px; text-align: center; font-weight: bold; text-decoration: none; margin-top: 15px; }
@@ -118,7 +125,7 @@
         <a href="#" class="nav-item active"><i class="fas fa-th-large"></i> <span>Dashboard</span></a>
         <a href="map.html" class="nav-item"><i class="fas fa-map"></i> <span>My Lands</span></a>
         <a href="scanner.html" class="nav-item"><i class="fas fa-robot"></i> <span>AI Scanner</span></a>
-        <a href="#" class="nav-item"><i class="fas fa-user"></i> <span>Profile</span></a>
+        <a href="services.html" class="nav-item"><i class="fas fa-tools"></i> <span>Services</span></a> <a href="#" class="nav-item"><i class="fas fa-user"></i> <span>Profile</span></a>
         <div style="flex:1"></div>
         <div class="nav-item" onclick="openLogoutModal()" style="color:var(--danger)"><i class="fas fa-sign-out-alt"></i> <span>Logout</span></div>
     </div>
@@ -139,10 +146,27 @@
                 </div>
                 <div class="map-placeholder"></div>
             </div>
+
             <div class="ai-panel">
-                <h3>AI বিশেষজ্ঞ</h3>
-                <div style="margin:20px 0; font-size:14px; color:#666"><p>ছবি তুলে ফসলের রোগ নির্ণয় করুন মুহূর্তেই।</p></div>
-                <a href="scanner.html" class="ai-btn"><i class="fas fa-camera"></i> স্ক্যান শুরু করুন</a>
+                <h3>স্মার্ট সার্ভিসসমূহ</h3>
+                
+                <div class="service-grid">
+                    <a href="drone-control.html" class="service-card">
+                        <i class="fas fa-drone"></i>
+                        <h4>স্মার্ট ড্রোন</h4>
+                        <p>কীটনাশক ছেটানো ও জমি পর্যবেক্ষণ।</p>
+                    </a>
+                    <a href="pump-automation.html" class="service-card">
+                        <i class="fas fa-faucet-drip"></i>
+                        <h4>অটো পাম্প</h4>
+                        <p>সেন্সর ভিত্তিক স্বয়ংক্রিয় সেচ ব্যবস্থা।</p>
+                    </a>
+                </div>
+
+                <div style="margin:20px 0 10px; font-size:14px; color:#666; border-top:1px solid #eee; pt:15px">
+                    <p>AI বিশেষজ্ঞের সাহায্য নিন:</p>
+                </div>
+                <a href="scanner.html" class="ai-btn"><i class="fas fa-camera"></i> রোগ শনাক্তকরণ</a>
             </div>
         </div>
 
